{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 17,
  "lineage": "aa75fd79-afd5-eb8b-7cac-9f9ef61b565d",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_eip",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-034b285611f7e671a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-194-69-165.compute-1.amazonaws.com",
            "public_ip": "34.194.69.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "terraform-kubeadm:cluster": "exotic-stud"
            },
            "vpc": true
          },
          "dependencies": [
            "module.cluster.random_pet.cluster_name"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:563825153145:instance/i-0ddb6c64462150996",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ddb6c64462150996",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "exotic-stud-20201109132501592800000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ac40b1a1d4df0d4",
            "private_dns": "ip-10-0-0-71.ec2.internal",
            "private_ip": "10.0.0.71",
            "public_dns": "ec2-34-207-236-155.compute-1.amazonaws.com",
            "public_ip": "34.207.236.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09d500888fd9a8696",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094706b45c0499f08",
            "tags": {
              "terraform-kubeadm:cluster": "exotic-stud",
              "terraform-kubeadm:node": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05d34961517db810a",
              "sg-067346d01ef3bf855",
              "sg-0732bbceedec38a1b",
              "sg-0b2a39cae9fbd9cee"
            ]
          },
          "dependencies": [
            "module.cluster.aws_eip.master",
            "module.cluster.aws_key_pair.main",
            "module.cluster.aws_security_group.egress",
            "module.cluster.aws_security_group.ingress_internal",
            "module.cluster.aws_security_group.ingress_k8s",
            "module.cluster.aws_security_group.ingress_ssh",
            "module.cluster.data.aws_ami.ubuntu",
            "module.cluster.random_pet.cluster_name",
            "module.cluster.random_string.token_id",
            "module.cluster.random_string.token_secret"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:563825153145:instance/i-0a26f111e060ed0d1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a26f111e060ed0d1",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "exotic-stud-20201109132501592800000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-088269e1bd24fc582",
            "private_dns": "ip-10-0-0-131.ec2.internal",
            "private_ip": "10.0.0.131",
            "public_dns": "ec2-54-242-49-105.compute-1.amazonaws.com",
            "public_ip": "54.242.49.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09db71038f2c93ee2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094706b45c0499f08",
            "tags": {
              "terraform-kubeadm:cluster": "exotic-stud",
              "terraform-kubeadm:node": "worker-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05d34961517db810a",
              "sg-067346d01ef3bf855",
              "sg-0b2a39cae9fbd9cee"
            ]
          },
          "dependencies": [
            "module.cluster.aws_eip.master",
            "module.cluster.aws_instance.master",
            "module.cluster.aws_key_pair.main",
            "module.cluster.aws_security_group.egress",
            "module.cluster.aws_security_group.ingress_internal",
            "module.cluster.aws_security_group.ingress_k8s",
            "module.cluster.aws_security_group.ingress_ssh",
            "module.cluster.data.aws_ami.ubuntu",
            "module.cluster.random_pet.cluster_name",
            "module.cluster.random_string.token_id",
            "module.cluster.random_string.token_secret"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:563825153145:instance/i-0cc7c5f6fde967976",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc7c5f6fde967976",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "exotic-stud-20201109132501592800000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06eb07abbfec61e41",
            "private_dns": "ip-10-0-0-15.ec2.internal",
            "private_ip": "10.0.0.15",
            "public_dns": "ec2-3-94-162-116.compute-1.amazonaws.com",
            "public_ip": "3.94.162.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08776ea0a52f3440f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094706b45c0499f08",
            "tags": {
              "terraform-kubeadm:cluster": "exotic-stud",
              "terraform-kubeadm:node": "worker-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05d34961517db810a",
              "sg-067346d01ef3bf855",
              "sg-0b2a39cae9fbd9cee"
            ]
          },
          "dependencies": [
            "module.cluster.aws_eip.master",
            "module.cluster.aws_instance.master",
            "module.cluster.aws_key_pair.main",
            "module.cluster.aws_security_group.egress",
            "module.cluster.aws_security_group.ingress_internal",
            "module.cluster.aws_security_group.ingress_k8s",
            "module.cluster.aws_security_group.ingress_ssh",
            "module.cluster.data.aws_ami.ubuntu",
            "module.cluster.random_pet.cluster_name",
            "module.cluster.random_string.token_id",
            "module.cluster.random_string.token_secret"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563825153145:security-group/sg-067346d01ef3bf855",
            "description": "Allow all outgoing traffic to everywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067346d01ef3bf855",
            "ingress": [],
            "name": "exotic-stud-egress",
            "name_prefix": "",
            "owner_id": "563825153145",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-kubeadm:cluster": "exotic-stud"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f67d8c437b16c52"
          },
          "dependencies": [
            "module.cluster.random_pet.cluster_name"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563825153145:security-group/sg-0b2a39cae9fbd9cee",
            "description": "Allow all incoming traffic from nodes and Pods in the cluster",
            "egress": [],
            "id": "sg-0b2a39cae9fbd9cee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from cluster nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from the Pods of the cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "exotic-stud-ingress-internal",
            "name_prefix": "",
            "owner_id": "563825153145",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-kubeadm:cluster": "exotic-stud"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f67d8c437b16c52"
          },
          "dependencies": [
            "module.cluster.random_pet.cluster_name"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563825153145:security-group/sg-0732bbceedec38a1b",
            "description": "Allow incoming Kubernetes API requests (TCP/6443) from outside the cluster",
            "egress": [],
            "id": "sg-0732bbceedec38a1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "exotic-stud-ingress-k8s",
            "name_prefix": "",
            "owner_id": "563825153145",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-kubeadm:cluster": "exotic-stud"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f67d8c437b16c52"
          },
          "dependencies": [
            "module.cluster.random_pet.cluster_name"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563825153145:security-group/sg-05d34961517db810a",
            "description": "Allow incoming SSH traffic (TCP/22) from outside the cluster",
            "egress": [],
            "id": "sg-05d34961517db810a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "exotic-stud-ingress-ssh",
            "name_prefix": "",
            "owner_id": "563825153145",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-kubeadm:cluster": "exotic-stud"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f67d8c437b16c52"
          },
          "dependencies": [
            "module.cluster.random_pet.cluster_name"
          ]
        }
      ]
    }
  ]
}